--- a/index.html
+++ b/index.html
@@ -58,6 +58,48 @@
             </div> <!-- aside content-wrapper ends -->
         </aside>
 
+        <section class="features">
+            <div class="content-wrapper">
+                <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
+                <article>
+                    <p class="fontawesome-icon"></p>
+                    <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+                </article>
+                <article>
+                    <p class="fontawesome-icon"></p>
+                    <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+                </article>
+                <article>
+                    <p class="fontawesome-icon"></p>
+                    <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+                </article>
+                <article>
+                    <p class="fontawesome-icon"></p>
+                    <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+                </article>
+                <article>
+                    <p class="fontawesome-icon"></p>
+                    <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset</p>
+                </article>
+                <article>
+                    <p class="fontawesome-icon"></p>
+                    <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+            </div> <!-- end features content wrapper -->
+        </section> <!-- end features section -->
+
+        <section class="reviews">
+            <div class="content-wrapper">
+                <h1>Be a better team in 5 days, like these.</h1>
+                <article>
+                    <img src="" alt="LaCrue Bottling Photo" />
+                    <div class="review-lacrue">
+                        <h3>LaCrue Bottling Co.<br>
+                            October 2017</h3>
+                        <p>LaCrue Bottling review goes here</p>
+                    </div>
+                </article>
+            </div> <!-- end review content wrapper -->
+        </section> <!-- end revew section -->
     </main> <!-- main wrapper -->
 
     <footer>
