--- a/about/index.html
+++ b/about/index.html
@@ -30,7 +30,7 @@
             <nav>
                 <ul>
                     <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-                    <li><a href="index.html" target="_blank">About</a></li>
+                    <li><a href="index.html">About</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,38 +39,49 @@
     <main>
         <section class="mission">
             <div class="content-wrapper">
+                <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
                 <div class="mission-content">
-                    <h1>Our Mission - we want to make you the team you always wanted to be.</h1>
-                    <p>This is the first mission paragraph</p>
-                    <p>This is the second mission paragraph</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+                        vel facilisis.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+                        vel facilisis.
+                    </p>
                 </div>
             </div> <!-- mission content wrapper ends -->
         </section> <!-- mission ends -->
+
         <section class="map">
             <figure>
+            </figure>
         </section>
         <section class="contact-section">
             <div class="content-wrapper">
-                <div class="general-contact">
-                    <h1>Contact us, because you all need this.</h1>
-                    <h3>General Information</h3>
-                    <address>
-                        <p>333 Main St. Lake Geneva, WI 53147<br>
+                <h2>Contact us, because you all need this.</h2>
+                <adress class="contact-content">
+                    <div>
+                        <h4>General Information</h4>
+                        <p>
+                            333 Main St. Lake Geneva, WI 53147<br>
                             555-555-5555<br>
-                            hello@unplugged.com</p>
-                    </address>
-                </div>
-                <div class="chat-contact">
-                    <h3>Chat with a Facilitator</h3>
-                    <address>
-                        <p>555-555-5556<br>
-                            facilitator@unplugged.com</p>
-                    </address>
-                </div>
+                            hello@unplugged.com
+                        </p>
+                    </div>
+                    <div>
+                        <h4>Chat with a Facilitator</h4>
+                        <p>
+                            555-555-5556<br>
+                            facilitator@unplugged.com
+                        </p>
+                    </div>
+                </adress> <!-- contact-content div ends -->
             </div> <!-- end contact content wrapper -->
         </section> <!-- end contact section -->
-
-    </main>
+    </main> <!-- main wrapper -->
 
     <footer>
         <div class="content-wrapper">
