Added breakpoints for tablet

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <div class="content-wrapper">
-            <a href="index.html"><img src="img/unplugged-logo.png" alt="unplugged logo"></a>
+            <a href="index.html"><img src="" alt="unplugged logo"></a>
             <div class="header-divider"></div>
             <nav>
                 <ul>
@@ -63,7 +63,7 @@
                 <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
                 <article>
                     <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+                    <p class="features-items">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
                 </article>
                 <article>
                     <p class="fontawesome-icon"></p>
@@ -95,7 +95,7 @@
                     <div class="review-lacrue">
                         <h3>LaCrue Bottling Co.<br>
                             October 2017</h3>
-                        <p>LaCrue Bottling review goes here</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                     </div>
                 </article>
             </div> <!-- end review content wrapper -->
