--- a/faq/index.html
+++ b/faq/index.html
@@ -20,6 +20,10 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
 </head>
 
 <body>
@@ -88,7 +92,7 @@
         </div> <!-- footer content-wrapper ends -->
 
         <div class="copyright">
-            <h2>Copyright 2021 | Unplugged</h2>
+            <p>Copyright 2021 | Unplugged</p>
         </div>
     </footer>
   <!-- Add your site or application content here -->
