--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 <body>
     <header>
         <div class="content-wrapper">
-            <a href="index.html"><img src="" alt="unplugged logo"></a>
+            <figure>
+                <a href="index.html">
+                    <img src="img/unplugged-logo.png" alt="unplugged logo">
+                </a>
+            </figure>
             <div class="header-divider"></div>
             <nav>
                 <ul>
@@ -95,7 +99,9 @@
             <div class="content-wrapper">
                 <h2>Be a better team in 5 days, like these.</h2>
                 <article>
-                    <img src="" alt="LaCrue Bottling Photo" />
+                    <figure>
+                        <img src="img/lacrue.jpg" alt="LaCrue Bottling Photo" />
+                    </figure>
                     <div class="review-lacrue">
                         <h3>LaCrue Bottling Co.<br>
                             October 2017</h3>
