--- a/about/index.html
+++ b/about/index.html
@@ -60,8 +60,9 @@
         </section> <!-- mission ends -->
 
         <section class="map">
-            <figure>
-            </figure>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d94010.21915830641!2d-88.49646803208654!3d42.580356721186654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880584e9f85c4509%3A0x9eb9a6efc12afe43!2sLake%20Geneva%2C%20WI%2053147!5e0!3m2!1sen!2sus!4v1616026708376!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
         </section>
         <section class="contact-section">
             <div class="content-wrapper">
