--- a/about/index.html
+++ b/about/index.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
+  <script src="https://kit.fontawesome.com/a79f4e5474.js" crossorigin="anonymous"></script>
+
   <meta name="theme-color" content="#fafafa">
 
   <!-- Google Fonts -->
@@ -29,7 +31,11 @@
 <body>
     <header>
         <div class="content-wrapper">
-            <a href="../index.html"><img src="" alt="unplugged logo"></a>
+            <figure>
+                <a href="index.html">
+                    <img src="../img/unplugged-logo.png" alt="unplugged logo">
+                </a>
+            </figure>
             <div class="header-divider"></div>
             <nav>
                 <ul>
