--- a/about/index.html
+++ b/about/index.html
@@ -32,14 +32,14 @@
     <header>
         <div class="content-wrapper">
             <figure>
-                <a href="index.html">
+                <a href="../index.html">
                     <img src="../img/unplugged-logo.png" alt="unplugged logo">
                 </a>
             </figure>
             <div class="header-divider"></div>
             <nav>
                 <ul>
-                    <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+                    <li><a href="../faq/index.html">FAQ</a></li>
                     <li><a href="index.html">About</a></li>
                 </ul>
             </nav>
