Added real text to replace all dummy text

--- a/about/index.html
+++ b/about/index.html
@@ -52,14 +52,10 @@
                 <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
                 <div class="mission-content">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
-                        vel facilisis.
+                        Office life can be tough.  We believe that by breaking out of the cubicle walls you can turn any group into a team of true collaborators.  Because let's be honest: face-to-face conversations around a campfire sounds a lot better than forwarded memos in an email chain.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
-                        vel facilisis.
+                        During your stay with us, you'll be able to step away from the daily grind of the office and give your creativity some space to breathe.  So swap the break room vending machine for meals from our professional chef.  Trade in the same old icebreaker activities for an outdoor obstacle courses. You'll be amazed at the ideas a team can generate after just a quick hiatus from the desk.
                     </p>
                 </div>
             </div> <!-- mission content wrapper ends -->
