--- a/faq/index.html
+++ b/faq/index.html
@@ -51,19 +51,19 @@
             <h2>Frequently Asked Questions</h2>
             <div class="faq-content">
                 <h4>How do I get to the Unplugged retreat?</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                <p>We're conveniently located just off of route 50.  Take exit 42, and turn right off the exit.  Then just follow the signs to Unplugged Retreat!</p>
             </div>
             <div class="faq-content">
                 <h4>What kind of team is right for the Unplugged retreat?</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                <p>All teams! Any group of people looking to strengthen their communication, teamwork, and creativity can benefit from what Unplugged has to offer.</p>
             </div>
             <div class="faq-content">
                 <h4>What size teams can you accommodate?</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>We have 12 private rooms each able to accommodate up to 2 guests.  If rooms are shared, we can accommodate teams of up to 24.</p>
             </div>
             <div class="faq-content">
                 <h4>Is there really no wifi available?</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                <p>While we prefer for our guests to stay "unplugged" throughout their stay, we understand that sometimes work just won't wait. Our computer room has 2 desktop machines that you're able to use, as well as wifi if you prefer to use your own laptop. We do ask that computer and wifi use be limited to the computer room in order to preserve the "unplugged" experience.</p>
             </div>
         </div> <!-- faq content-wrapper ends -->
     </main> <!-- main faq ends -->
