--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="review-lacrue">
                         <h3>LaCrue Bottling Co.<br>
                             October 2017</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p>Our team could not have had a better experience on our Unplugged Retreat! The food was delicious, the obstacle courses were so much fun, and the scenery was beautiful! This was a great way to de-stress, but also build our bond as a team.  We definitely came back to the office stronger and ready to tackle new projects!</p>
                     </div>
                 </article>
             </div> <!-- end review content wrapper -->
